# solana-m-extensions

./: .env.dev  .env.prod  .gitignore  Anchor.toml  Cargo.toml  LICENSE  Makefile  README.md  jest.config.js  jest.setup.js  package.json  pid.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/setup/: action.yaml
.github/workflows/: anchor.yaml
clients/ext_swap/: generate_clients.ts
programs/callback_interface/: Cargo.toml
programs/callback_interface/src/: lib.rs
programs/dynamic_ext/: Cargo.toml
programs/dynamic_ext/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/dynamic_ext/src/instructions/: initialize.rs  mod.rs  sync.rs  transfer_hook.rs  unwrap.rs  wrap.rs
programs/dynamic_ext/src/instructions/transfer_hook/: intialize.rs  mod.rs  transfer_hook.rs  whitelist.rs
programs/dynamic_ext/src/utils/: conversion.rs  mod.rs  token.rs
programs/example_custom/: Cargo.toml
programs/example_custom/src/: lib.rs
programs/ext_core/: Cargo.toml
programs/ext_core/src/: errors.rs  lib.rs
programs/ext_core/src/instructions/: mod.rs
programs/ext_core/src/instructions/admin/: mod.rs
programs/ext_core/src/instructions/open/: mod.rs  unwrap.rs  wrap.rs
programs/ext_core/src/state/: core_config.rs  ext_config.rs  mod.rs
programs/ext_core/src/utils/: token.rs
programs/ext_interface/: Cargo.toml
programs/ext_interface/src/: cpi.rs  error.rs  instruction.rs  lib.rs  state.rs
programs/ext_swap/: Cargo.toml
programs/ext_swap/src/: errors.rs  lib.rs  state.rs
programs/ext_swap/src/instructions/: initialize.rs  mod.rs  swap.rs  unwrap.rs  whitelist.rs  whitelist_ext.rs  wrap.rs
programs/ext_swap/src/sdk/: account_meta_for_swap.rs  amm.rs  mod.rs
programs/ext_yield_interface/: Cargo.toml
programs/ext_yield_interface/idls/: ext_core.json
programs/ext_yield_interface/src/: lib.rs
programs/m_ext/: Cargo.toml
programs/m_ext/idls/: ext_earn.json  m_ext_v1_no_yield.json  m_ext_v1_scaled_ui.json
programs/m_ext/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/m_ext/src/instructions/: claim.rs  claim_fees.rs  initialize.rs  manage_wrap_authority.rs  migrate.rs  mod.rs  quote.rs  set_distribution_status.rs  set_fee.rs  set_ibt_rate.rs  swap.rs  sync.rs  transfer_admin.rs  unwrap.rs  wrap.rs
programs/m_ext/src/instructions/admin/: initialize_config.rs
programs/m_ext/src/instructions/crank/: mod.rs  remove_orphaned_earner.rs
programs/m_ext/src/instructions/crank/admin/: add_earn_manager.rs  remove_earn_manager.rs  set_earn_authority.rs
programs/m_ext/src/instructions/crank/earn_authority/: claim_for.rs  mod.rs  sync.rs
programs/m_ext/src/instructions/crank/earn_manager/: add_earner.rs  configure.rs  remove_earner.rs  transfer_earner.rs
programs/m_ext/src/instructions/crank/earner/: mod.rs  set_recipient.rs
programs/m_ext/src/instructions/earn_authority/: claim_for.rs  mod.rs  update_claims_root.rs
programs/m_ext/src/instructions/earn_manager/: add_earner.rs  configure.rs  mod.rs  remove_earner.rs  transfer_earner.rs
programs/m_ext/src/instructions/ext_authority/: add_earn_manager.rs  claim_excess.rs  initialize_ext.rs  mod.rs  remove_earn_manager.rs  set_earn_authority.rs  update_swap_authority.rs
programs/m_ext/src/instructions/scaled_ui/: mod.rs  set_fee.rs  sync.rs
programs/m_ext/src/state/: config.rs  earn_manager.rs  earner.rs  ext.rs  mod.rs
programs/m_ext/src/state/ext/: access.rs  mod.rs
programs/m_ext/src/state/ext/yield_config/: crank.rs  custom.rs  manual.rs  merkle_claims.rs  mod.rs  rebasing.rs
programs/m_ext/src/utils/: conversion.rs  merkle_proof.rs  mod.rs  quote.rs  spl_multisig.rs  token.rs
programs/scaled_ui_ext/: Cargo.toml
programs/scaled_ui_ext/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/scaled_ui_ext/src/instructions/: claim_excess.rs  claim_fees.rs  initialize.rs  mod.rs  set_fee.rs  set_m_mint.rs  sync.rs  unwrap.rs  update_wrap_authority.rs  wrap.rs
programs/scaled_ui_ext/src/utils/: conversion.rs  token.rs
programs/unwrap_fee_example/: Cargo.toml
programs/unwrap_fee_example/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/unwrap_fee_example/src/instructions/: initialize_extra_account_metas.rs  mod.rs  sync.rs  unwrap.rs  wrap.rs
services/cli/: deploy.ts  example_token_metadata.json  main.ts  package.json  token-extensions.ts
tests/: solana-extensions.ts  test-utils.ts
tests/keys/: user.json
tests/programs/: earn.json  earn.ts
tests/unit/: dynamic_ext.test.ts  ext_earn.ts  ext_swap.test.ts  ext_test_harness.ts  m_ext.test.ts  no_yield_ext.test.ts  scaled_ui_ext.test.ts
