[package]
name = "dynamic_ext"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_ext"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
transfer-hook = []


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
cfg-if.workspace = true
earn.workspace = true
spl-token-2022.workspace = true
