[package]
name = "dynamic_ext"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_ext"

[features]
default = ["transfer-whitelist", "permissioned-wrapping", "ibt"]

# anchor features
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# yield features
scaled-ui = []
ibt = []
permissioned-wrapping = []
yield-crank = []
no-yield = []

# transfer hook features
transfer-hook = [
    "dep:spl-transfer-hook-interface",
    "dep:spl-tlv-account-resolution",
]
transfer-whitelist = ["transfer-hook"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
earn.workspace = true
spl-token-2022.workspace = true
spl-tlv-account-resolution = { version = "0.9.0", optional = true }
spl-transfer-hook-interface = { version = "0.9.0", optional = true }
spl-discriminator = "0.4"
