[package]
name = "m_ext_interface"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
spl-transfer-hook-interface.workspace = true
spl-discriminator.workspace = true
spl-tlv-account-resolution.workspace = true
solana-program.workspace = true
spl-pod.workspace = true
num-derive = "0.4"
thiserror = "2.0"
num-traits = "0.2"
