[package]
name = "ext_swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ext_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
earn.workspace = true
solana-security-txt.workspace = true
m_ext = {path = "../m_ext", features = ["cpi"]}
