[package]
name = "ext_swap"
version = "0.1.0"
description = "Swap program for converting between M Extensions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ext_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
sdk = ["dep:jupiter-amm-interface", "dep:spl-token-2022", "dep:anyhow", "dep:rust_decimal"]


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
earn.workspace = true
solana-security-txt.workspace = true
m_ext = {path = "../m_ext", features = ["cpi"]}
jupiter-amm-interface = { version = "0.5.1", optional = true}
spl-token-2022 = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
