[package]
name = "m_ext"
version = "0.1.0"
description = "Program for launching stablecoins backed by M"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "m_ext"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-token-2022.workspace = true
cfg-if.workspace = true
solana-security-txt.workspace = true
solana-program.workspace = true
earn.workspace = true

