[package]
name = "unwrap_fee_example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unwrap_fee_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang.workspace = true
anchor-spl = "0.31.1"
solana-program.workspace = true
m_ext_interface = {path = "../ext_interface"}
spl-discriminator.workspace = true
spl-tlv-account-resolution.workspace = true
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
earn = { git = "https://github.com/m0-foundation/solana-m", branch = "solana-v2-earner-rate", features = [
    "no-entrypoint",
] }
scaled_ui_ext = { path = "../scaled_ui_ext" }
